--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.4.0",
     "chalk": "4.1",
     "color": "^4.2.3",
     "dotenv": "^16.0.3",
@@ -19,6 +21,8 @@
     "firebase-admin": "^11.5.0",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "telegraf": "^4.11.2"
   }
 }
