--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
-    "telegraf": "^4.11.2"
+    "telegraf": "^4.11.2",
+    "telegraf-wizard": "^0.0.8"
   }
 }
